# dci-core-primitives

./: CMakeLists.txt
include/dci/: primitives.hpp
include/dci/primitives/: api.hpp  array.hpp  byte.hpp  exceptionPtr.hpp  floating.hpp  integral.hpp  list.hpp  map.hpp  none.hpp  opt.hpp  ptr.hpp  set.hpp  string.hpp  tuple.hpp  variant.hpp  void.hpp
